test/compile-fail/resolution/use/no-name-group/expected.txt
error: unresolved item `c`
 --> top.rhdl:5:11
  |
5 | use a::{b, c, self};
  |            ^ no `c` in `a`
